# SEC-Labo02

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: action.rs  authentication.rs  main.rs  yubi.rs
server/: Cargo.toml  db.ron
server/src/: action.rs  authentication.rs  database.rs  mailer.rs  main.rs
user/: Cargo.toml
user/src/: user.rs
utils/: Cargo.toml
utils/src/: crypto.rs  data.rs  errors.rs  lib.rs  messages.rs  strings.rs  user.rs
validation/: Cargo.toml
validation/src/: email.rs  lib.rs  password.rs  pin.rs  token.rs
