[package]
name = "server"
version = "0.1.0"
authors = ["SEC"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rustbreak = { version = "2", features = ["ron_enc"] }
lazy_static = "1.4"
bincode = "1.3"
ecdsa = "0.12.4"
p256 = "0.9"

[dependencies.validation]
path = "../validation"

[dependencies.utils]
path = "../utils"
