[package]
name = "server"
version = "0.1.0"
authors = ["SEC"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rustbreak = { version = "2", features = ["ron_enc"] }
lazy_static = "1.4"
bincode = "1.3"
ecdsa = "0.12.4"
p256 = "0.9"
lettre = "0.10.0-rc.6"
envfile = "0.2"

[dependencies.uuid]
version = "1.1.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.validation]
path = "../validation"

[dependencies.utils]
path = "../utils"
