[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ecdsa = "0.12.4"
p256 = "0.9"
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }

[dependencies.validation]
path = "../validation"
